[project]
name = "documentation-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "black>=26.5.1",
    "certifi>=2026.5.20",
    "fastapi>=0.136.3",
    "firecrawl-py>=4.28.2",
    "isort>=8.0.1",
    "jinja2>=3.1.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langchainhub>=0.1.21",
    "langsmith>=0.8.9",
    "nltk>=3.9.4",
    "openai>=2.41.0",
    "pillow>=12.2.0",
    "protobuf<=3.20.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "streamlit-chat>=0.1.1",
    "tiktoken>=0.13.0",
    "tqdm>=4.68.1",
    "unstructured>=0.22.31",
    "uvicorn>=0.49.0",
]
